Add Alex's documentation and add new undo